# tas1516_car_07

simulation/ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
simulation/cmd_vel_ackermann_bridge/launch/: cmd_vel_ackermann_bridge.launch
simulation/tas_simulator/launch/: startSimulation.launch  start_simulation.launch
simulation/tas_simulator/resources/: map_3rd_floor.yaml  map_3rd_floor_025.pgm  map_3rd_floor_025.yaml
tas/launch/: move_base.launch  odom.launch
tas_bringup/: CMakeLists.txt  package.xml
tas_bringup/launch/: exploration_frontier.launch  localization.launch  rviz.launch  sbpl_navigation.launch  simulated_navigation.launch  simulated_slam.launch  slam.launch  start_sbpl_navigation.launch
tas_bringup/param/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_exploration_params.yaml  dwa_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  tas_car.mprim  tas_car.rviz  tas_car2.mprim
tas_navigation/ackermann_move_base/: CMakeLists.txt  package.xml
tas_navigation/ackermann_move_base/cfg/: AckermannMoveBase.cfg
tas_navigation/ackermann_move_base/include/ackermann_move_base/: ackermann_move_base.h
tas_navigation/ackermann_move_base/src/: ackermann_move_base.cpp  ackermann_move_base_node.cpp
tas_odometry/: CMakeLists.txt
tas_odometry/src/: imu_odometry.cpp  perfect_odometry.cpp  wheel_odometry.cpp
